--- a/style.css
+++ b/style.css
@@ -111,10 +111,10 @@ header .navbar {
     background-image: transparent;
 }
 .htext {
-    padding-right: 25%;
+    padding-right: 15%;
 }
 .htext h1{
-    font-size: 4vw;
+    font-size: 3.5vw;
     margin-top: 15%;
 }
 .htext p{
@@ -136,13 +136,15 @@ header .navbar {
 .himg img{
     width: 31vw;
 }
+#brdbtm {
+    display: none;
+}
 /* hero section finish */
 
 /* curriculum section  */
 .curriculum {
     text-align: center;  
     background-image: url(assets/bg.png);
-    background-repeat: repeat-x;
 }
 #lstxt{
     margin: 3% 0 6%;
@@ -188,6 +190,15 @@ header .navbar {
  .arwbtn #leftarw {
     transform: rotate(180deg);
  }
+ .scrltxt {
+    margin-top: 5%;
+    background-color: transparent;
+    font-size: 2vw;
+    font-weight: 500;
+    filter: drop-shadow(0 0 10px orange);
+    text-shadow: 0 0 10px orange;
+
+ }
 /* curriculum section finish */
 
 /* our story section  */
@@ -196,7 +207,7 @@ header .navbar {
     text-align: center;
     margin: 0 -10vw !important;
     padding: 0 10vw;
-    background: linear-gradient(0deg, rgba(254, 161, 0, 0.3), rgb(255, 255, 255));
+    background: linear-gradient(0deg, rgba(254, 161, 0, 0.45), rgb(255, 255, 255));
 }
 #ourtxt {
     margin: 8% 0 7%;
@@ -256,38 +267,45 @@ header .navbar {
     bottom: 42%;
     padding: 0.7vw 1.3vw;
     font-size: 1.2vw;
+    font-weight: 550;
     background-color: #3CD8E8;
+    color: white;
 }
 #b2 {
     left: 50%;
     bottom: 69%;
     padding: 0.7vw 1.3vw;
     font-size: 0.8vw;
+    font-weight: 550;
     background-color: #95B226;
+    color: white;
 }
 #b3 {
     left: 77%;
     bottom: 69%;
     padding: 0.7vw 1.3vw;
     font-size: 0.8vw;
+    font-weight: 550;
     background-color: #5D58F0;
+    color: white;
 }
 #b4 {
     left: 50%;
     bottom: 16%;
     padding: 0.7vw 1.3vw;
     font-size: 0.8vw;
+    font-weight: 550;
     background-color: orange;
+    color: white;
 }
 #b5 {
     left: 77%;
     bottom: 16%;
     padding: 0.7vw 1.3vw;
     font-size: 0.8vw;
+    font-weight: 550;
     background-color: #95B226;
-}
-.blk_pmrybtn {
-    margin: 8% 0 3% ;
+    color: white;
 }
 /* our story section finish */
 
@@ -317,6 +335,7 @@ footer {
     display: flex;
     font-size: 1.3vw;
     font-weight: bold;
+    grid-row: 1;
 }
 .flogo img {
     height: 4.2vw;
@@ -330,6 +349,10 @@ footer {
 #n1 p {
     font-size: 1.2vw;
 }
+.fabout {
+    grid-column: 2;
+    grid-row: 1;
+}
 .fabout, #n2 {
     padding-left: 30%;
 }
@@ -337,11 +360,19 @@ footer {
     margin: 8% 0 0;
     font-size: 1.8vw;
 }
+#n2 a {
+    text-decoration: none;
+    color: white;
+}
 #n2 h4 {
     margin: 0 0 4%;
     font-size: 1.2vw;
     font-weight: 300;
     width: max-content;
+}
+.ftouch {
+    grid-column: 3;
+    grid-row: 1;
 }
 .ftouch h3{
     margin: 5% 0 8%;
@@ -364,6 +395,9 @@ footer {
     }
     .arwbtn, .navbtn, .logo h1{
         display: none;
+    }
+    #brdbtm {
+        display: block;
     }
 /* nav bar  */
     .navbar img{
@@ -429,6 +463,7 @@ footer {
     }
     .htext p {
         font-size: 3vw;
+        padding: 0 2%;
     }
     .blk_pmrybtn{
         font-size: 4vw;
@@ -446,7 +481,7 @@ footer {
         font-size: 6vw;
     }
     .crd {
-        width: 90%;
+        width: 92%;
         margin-bottom: 5%;
     }
     .crd img {
@@ -543,12 +578,13 @@ footer {
     }
     .fabout {
         grid-template-columns: 1fr;
+        grid-column: 1;
         grid-row: 3;
         margin: 0;
         padding: 0 0% 0 9.4%;
     }
     .fabout h3 {
-        margin: 0 0 3%;
+        margin: 8% 0 3%;
         font-size: 4vw;
     }
     
@@ -564,6 +600,7 @@ footer {
     }
     .ftouch {
         grid-template-columns: 1fr;
+        grid-column: 1;
         grid-row: 5;
         margin: 0;
         padding: 0 0% 0 7%;
